--- a/1 process data.ipynb
+++ b/1 process data.ipynb
@@ -922,9 +922,7 @@
     "    None,\n",
     "    remove_pre=False\n",
     ")\n",
-    "# plt.scatter(latent_ff_hori,trialdf.belief_ff_hori); plt.title('belief');plt.axis('equal'); plt.show()\n",
-    "\n",
-    "\n"
+    "# plt.scatter(latent_ff_hori,trialdf.belief_ff_hori); plt.title('belief');plt.axis('equal'); plt.show()\n"
    ]
   },
   {
