--- a/1 process data.ipynb
+++ b/1 process data.ipynb
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,26 +978,26 @@
     "    for degree, thiscov in zip(rotdegree, cov):\n",
     "        R=np.array([[np.cos(-degree/180*pi),-np.sin(-degree/180*pi)],[np.sin(-degree/180*pi),np.cos(-degree/180*pi)]])\n",
     "        relativeposcov.append(R.T@thiscov[:2,:2]@R)\n",
-    "    relativeposcov=np.stack(relativeposcov)\n",
+    "    relativeposcov=np.stack(relativeposcov)*worldscale*worldscale\n",
     "    return relativeposcov\n",
     "df['relcov']=df.apply(fun, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved: 0618_m51df.pkl\n"
+      "saved: 0918_m51df.pkl\n"
      ]
     }
    ],
    "source": [
-    "date='0618'\n",
+    "date='0918'\n",
     "df.to_pickle(resdir/f'{date}_m51df.pkl')\n",
     "notify(f'saved: {date}_m51df.pkl')\n",
     "print(f'saved: {date}_m51df.pkl')"
