neural data with variance

--- a/1 process data.ipynb
+++ b/1 process data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,14 +313,17 @@
     "        activities = gaussian_filter1d(\n",
     "            activities, sigma=4, axis=0)  # neural for each trial\n",
     "        activityds = downsample(activities, bin_size=bin_size)\n",
-    "\n",
+    "        activity_var_ds = downsample_variance(activities, bin_size=bin_size)\n",
+    "        \n",
     "        for area in areas:\n",
     "            area_mask = [v in area for v in units_area]\n",
     "            if sum(area_mask) == 0:\n",
     "                activity_ = np.nan\n",
     "            else:\n",
     "                activity_ = activityds[:, area_mask]  # area activity\n",
+    "                activity_var_ds_=activity_var_ds[:,area_mask]\n",
     "            sessdata[area].append(activity_)\n",
+    "            sessdata[f'{area}_var'].append(activity_var_ds_)\n",
     "\n",
     "    sessdata['error'] += (trials_error)\n",
     "    sessdata['error_sign'] += (trials_error_sign)\n",
@@ -340,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +556,7 @@
        "(3, 0.005)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -635,21 +638,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(Index(['trial', 'session', 'fullon', 'density', 'eye_hori', 'eye_vert',\n",
-       "        'ff_hori', 'ff_vert', 'fx', 'fy', 'mx', 'my', 'mv', 'mw', 'PPC', 'PFC',\n",
-       "        'MST', 'error', 'error_sign', 'target_angle', 'target_distance',\n",
-       "        'state', 'action', 'task', 'likelihood', 'belief', 'rawcov'],\n",
+       "        'ff_hori', 'ff_vert', 'fx', 'fy', 'mx', 'my', 'mv', 'mw', 'PPC',\n",
+       "        'PPC_var', 'PFC', 'PFC_var', 'MST', 'MST_var', 'error', 'error_sign',\n",
+       "        'target_angle', 'target_distance', 'state', 'action', 'task',\n",
+       "        'likelihood', 'belief', 'rawcov'],\n",
        "       dtype='object'),\n",
        " Index(['session', 'trial', 'belief', 'rawcov'], dtype='object'))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -750,6 +754,9 @@
       "Column: mv, Lengths: [25, 22, 15]\n",
       "Column: mw, Lengths: [25, 22, 15]\n",
       "Column: PPC, Lengths: [25, 22, 15]\n",
+      "Column: PPC_var, Lengths: [25, 22, 15]\n",
+      "Column: PFC_var, Lengths: [25, 22, 15]\n",
+      "Column: MST_var, Lengths: [25, 22, 15]\n",
       "Column: state, Lengths: [25, 22, 15]\n",
       "Column: action, Lengths: [25, 22, 15]\n",
       "Column: task, Lengths: [2, 2, 2]\n",
@@ -786,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -796,6 +803,9 @@
       "Column: ff_hori, Lengths: [(16,), (22,), (10,)]\n",
       "Column: ff_vert, Lengths: [(16,), (22,), (10,)]\n",
       "Column: PPC, Lengths: [(16, 94), (22, 112), (10, 94)]\n",
+      "Column: PPC_var, Lengths: [(16, 94), (22, 112), (10, 94)]\n",
+      "Column: PFC_var, Lengths: [(16, 94), (22, 112), (10, 94)]\n",
+      "Column: MST_var, Lengths: [(16, 94), (22, 112), (10, 94)]\n",
       "Column: state, Lengths: [(16, 5), (22, 5), (10, 5)]\n",
       "Column: action, Lengths: [(16, 2), (22, 2), (10, 2)]\n",
       "Column: belief, Lengths: [(16, 5), (22, 5), (10, 5)]\n",
@@ -838,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +949,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,19 +997,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# date='0918'\n",
+    "# df.to_pickle(resdir/f'{date}_m51df.pkl')\n",
+    "# notify(f'saved: {date}_m51df.pkl')\n",
+    "# print(f'saved: {date}_m51df.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved: 0918_m51df.pkl\n"
+      "saved: 1014_m51df.pkl\n"
      ]
     }
    ],
    "source": [
-    "date='0918'\n",
+    "# with neuron variance as PPC_var\n",
+    "date='1014'\n",
     "df.to_pickle(resdir/f'{date}_m51df.pkl')\n",
     "notify(f'saved: {date}_m51df.pkl')\n",
     "print(f'saved: {date}_m51df.pkl')"
@@ -1008,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "lab",
    "language": "python",
    "name": "python3"
   },
